prevent bus animation from jumping to first frame on deactivate

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -2,14 +2,6 @@
 @import "compass/utilities";
 @import "compass/css3/user-interface";
 
-@mixin frame-animation ($animationProps) {
-	&.animate {
-		.container {
-			@include animation($animationProps);	
-		}
-	}
-}
-
 @mixin clip-path ($prop) {
 	-webkit-clip-path: $prop;
 	clip-path: $prop;
